<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
        <array key="YS Display-Medium.ttf">
            <string>YSDisplay-Medium</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="REt-hC-67A">
                                <rect key="frame" x="20" y="60" width="374" height="802"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lwh-ib-dpx">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="23.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" verticalHuggingPriority="251" text="Вопрос:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HB3-fM-Huw" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="338" height="23.5"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lKK-aP-i6P" userLabel="Index Label">
                                                <rect key="frame" x="338" y="0.0" width="36" height="23.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="374" id="odQ-CZ-f76"/>
                                        </constraints>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Deadpool" translatesAutoresizingMaskIntoConstraints="NO" id="BZ8-4W-1CW" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="43.5" width="374" height="561"/>
                                        <color key="backgroundColor" name="YP White"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="BZ8-4W-1CW" secondAttribute="height" multiplier="2:3" id="nw6-ha-WQF"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="clip" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qWY-YQ-exP" userLabel="Question Label">
                                        <rect key="frame" x="0.0" y="624.5" width="374" height="97.5"/>
                                        <rect key="contentStretch" x="0.80000000000000004" y="0.0" width="1" height="1"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                        <size key="shadowOffset" width="0.0" height="0.0"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleAspectFill" horizontalCompressionResistancePriority="724" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Be6-2a-bwM">
                                        <rect key="frame" x="0.0" y="742" width="374" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lg6-lo-eqH" userLabel="No button">
                                                <rect key="frame" x="0.0" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="4fU-h3-n1G"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="157" id="Y3z-k2-1qk"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="89j-Ce-uGc"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4WC-mg-XVp" userLabel="Yes button">
                                                <rect key="frame" x="197" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="Nuf-4n-9hQ"/>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="157" id="SFI-w5-aUz"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PdO-HN-xUS"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="BZ8-4W-1CW" firstAttribute="top" secondItem="Lwh-ib-dpx" secondAttribute="bottom" constant="20" id="oCp-ta-3h4"/>
                                </constraints>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="lvF-si-8aT">
                                <rect key="frame" x="197" y="427" width="20" height="9"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="20" id="Fqt-qE-Yrf"/>
                                    <constraint firstAttribute="height" constant="9" id="Z70-I4-UHZ"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" id="dZg-bp-YPR"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" id="g3m-Yt-r6h"/>
                                </constraints>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lvF-si-8aT" secondAttribute="trailing" constant="197" id="HuE-1m-jgM"/>
                            <constraint firstItem="REt-hC-67A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Kh5-Lq-Qbn"/>
                            <constraint firstItem="lvF-si-8aT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="197" id="fzL-Um-sXH"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="lvF-si-8aT" secondAttribute="bottom" constant="392" id="gaM-g8-5dv"/>
                            <constraint firstItem="REt-hC-67A" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" constant="-34" id="mhV-Md-ON7"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="REt-hC-67A" secondAttribute="trailing" constant="20" id="nsK-pb-kXH"/>
                            <constraint firstItem="lvF-si-8aT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="331" id="vgi-TT-OBk"/>
                            <constraint firstItem="REt-hC-67A" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="60" id="zO1-Ox-rmp"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="lvF-si-8aT" id="84O-Hu-l6H"/>
                        <outlet property="counterLabel" destination="lKK-aP-i6P" id="uli-cI-yM3"/>
                        <outlet property="imageView" destination="BZ8-4W-1CW" id="fQE-1i-QQA"/>
                        <outlet property="noButton" destination="Be6-2a-bwM" id="1Qn-Xq-Zhd"/>
                        <outlet property="textLabel" destination="qWY-YQ-exP" id="6jb-9i-oS6"/>
                        <outlet property="yesButton" destination="4WC-mg-XVp" id="s4C-No-KCO"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-20.289855072463769" y="69.642857142857139"/>
        </scene>
    </scenes>
    <resources>
        <image name="Deadpool" width="2000" height="3000"/>
        <namedColor name="YP Black">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
